--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="progress">
-            <div class="circle">1</div>
+            <div class="circle active">1</div>
             <div class="circle">2</div>
             <div class="circle">3</div>
             <div class="circle">4</div>
