--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="progress">
+        <div class="progress-container">
+            <div class="progress" id="progress"></div>
             <div class="circle active">1</div>
             <div class="circle">2</div>
             <div class="circle">3</div>
             <div class="circle">4</div>
         </div>
-        <button class="btn" id="Prev" disabled>Prev</button>
-        <button class="btn" id="Next">Next</button>
+        <button class="btn" id="prev" disabled>Prev</button>
+        <button class="btn" id="next">Next</button>
     </div>
 
     <script src="./script.js"></script>
